--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "eslint": "^7.11.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "body-parser": "latest"
   }
 }
