--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "Rujun Yao, Yiman Liu",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "latest",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
     "eslint": "^7.11.0",
     "express": "^4.17.1",
-    "body-parser": "latest"
+    "mongodb": "^3.6.2"
   }
 }
