--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "latest",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongodb": "^3.6.2"
+    "mongodb": "^3.6.2",
+    "yarn": "^1.22.10"
   }
 }
