--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
     "heroku-postbuild": "cd react && npm install && npm run build"
   },
   "author": "Rujun Yao, Yiman Liu",
