--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "body-parser": "latest",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.1",
     "mongodb": "^3.6.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "typescript": "^4.0.5",
     "yarn": "^1.22.10"
   },
